[package]
name = "semtech_radios"
version = "0.1.6"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Support for Semtech SX126x and SX128x LoRa radios"
keywords = ["lora", "embedded", "semtech", "sx126x", "sx128x"]
categories = [
    "no-std",
]
repository = "https://github.com/David-OConnor/semtech-radios"
documentation = "https://docs.rs/semtech_radios"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
defmt = "1.0.1"
embedded-hal = "1.0.0"